fix: footer unaligned headers

--- a/src/pages/footer/footerv1.scss
+++ b/src/pages/footer/footerv1.scss
@@ -30,6 +30,8 @@
             font-family: 'Poppins-Medium', sans-serif;
             font-size: 14px;
             color: #777777;
+            margin-top: 10px;
+            margin-bottom: 30px;
             .footer-section--list-item{
                 list-style-position: inside;
                 list-style-type: disc;
